# simple_blockchain

./: .gitignore  Cargo.toml  README.md
src/: block.rs  blockchain.rs  hash.rs  main.rs
src/consensus/: mod.rs  proof_of_work.rs
